fix spacing

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,7 +5,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 64px;
+  justify-content: center;
+  padding-top: 32px;
 }
 
 .ContactForm {
