--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -3,8 +3,6 @@
     display: flex;
     align-items: flex-end;
     justify-content: space-between;
-    position: absolute;
-    bottom: 16px;
     text-decoration: underline;
     font-size: 12px;
   }
